# bpc-pc1t-snake

./: .gitignore  CMakeLists.txt  README.md  main.c
console/: console.c  console.h  consoleDrawEnd.h  consoleDrawScore.h  consoleDrawSnake.h  consoleInput.h
include/: base.h  fruitArray.h  inputBuffer.h  point.h  snake.h  statFile.h  winDrawScreen.h  winDrawSnake.h  winDrawText.h
lib/: fruitArray.h  inputBuffer.h  statFile.h
snake/: snakeLogic.h  snakeStruct.h
src/: fruitArray.c  inputBuffer.c  snake.c  statFile.c  winDrawScreen.c  winDrawSnake.c  winDrawText.c
win_api/: winDrawEndScreen.h  winDrawMainScreen.h  winDrawSnake.h  winDrawText.h
